# tollkeeper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  server_test.md
app/: Cargo.toml  build.rs  config.toml
app/assets/: challenge.css  challenge.js  worker.js
app/src/: config.rs  data_formats.rs  main.rs
app/src/config/: mod.rs
app/src/config/tests/: mod.rs
app/src/files/: mod.rs  tests.rs
app/src/http/: mod.rs  request.rs
app/src/http/parsing/: headers.rs  mod.rs  request.rs  response.rs
app/src/http/parsing/tests/: header_parsing_tests.rs  mod.rs  request_parsing_tests.rs  response_parsing_tests.rs
app/src/http/request/: mod.rs  parsing.rs
app/src/http/request/body_reader/: mod.rs  tests.rs
app/src/http/request/body_utils/: mod.rs  tests.rs
app/src/http/request/parsing/: mod.rs
app/src/http/request/tests/: mod.rs  request_header_tests.rs  request_tests.rs
app/src/http/response/: mod.rs  tests.rs
app/src/http/response/tests/: display_tests.rs  mod.rs  response_tests.rs
app/src/http/server/: cancellation_token.rs  mod.rs
app/src/http/server/tests/: http_endpoints_serve_tests.rs  mod.rs  server_tests.rs
app/src/http/tests/: headers_tests.rs  mod.rs  stream_body_tests.rs
app/src/payment/: mod.rs
app/src/payment/tests/: mod.rs  pay_toll_serve_tests.rs  payment_serve_tests.rs  payment_service_tests.rs
app/src/proxy/: mod.rs
app/src/proxy/tests/: header_tests.rs  json_tests.rs  mod.rs  proxy_serve_tests.rs  proxy_service_tests.rs
app/src/templates/: handlebars.rs  mod.rs
app/src/templates/tests/: handlebar_template_renderer_tests.rs  mod.rs
app/templates/: challenge.html
lib/: Cargo.toml
lib/src/: err.rs  lib.rs  tollkeeper.rs  util.rs
lib/src/declarations/: mod.rs
lib/src/declarations/hashcash/: mod.rs
lib/src/declarations/hashcash/tests/: double_spent_db_tests.rs  hashcash_declaration_tests.rs  mod.rs  stamp_tests.rs
lib/src/descriptions/: mod.rs
lib/src/descriptions/regex/: mod.rs
lib/src/descriptions/regex/tests/: mod.rs
lib/src/signatures/: mod.rs  serde.rs  tests.rs
lib/src/tests/: gate_tests.rs  mod.rs  tollkeeper_tests.rs
lib/src/tests/mocks/: mod.rs
lib/src/tollkeeper/: challenge.rs  description.rs  destination.rs  err.rs  gate.rs  gate_status.rs  mod.rs  order.rs  suspect.rs  tests.rs  toll.rs  tollkeeper.rs  util.rs
lib/src/tollkeeper/declarations/: hashcash.rs  mod.rs
lib/src/tollkeeper/declarations/hashcash/: mod.rs
lib/src/tollkeeper/descriptions/: mod.rs
lib/src/tollkeeper/tests/: gate_tests.rs  mocks.rs  mod.rs  tollkeeper_tests.rs
lib/tests/: tollkeeper_tests.rs
proxy_test/: Dockerfile  (+4 more)
(+11 files in other folders)
