[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.9.0"
url = "2.5.4"
tollkeeper = { path = "../lib" }
base64 = "0.22.1"
serde_json = "1.0.141"

[dev-dependencies]
test-case = "3.3.1"
