[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.9.0"
url = "2.5.4"
tollkeeper = { path = "../lib", features = ["serde"] }
base64 = "0.22.1"
serde_json = { version = "1.0.141", features = ["preserve_order"]}
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
handlebars = "6.3.2"

[dev-dependencies]
test-case = "3.3.1"

[build-dependencies]
walkdir = "2.5.0"

