[package]
name = "app"
version = "0.2.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.9.0", features = ["serde"] } 
url = { version = "2.5.4", features = ["serde"] }
tollkeeper = { path = "../lib", features = ["serde"] }
base64 = "0.22.1"
serde_json = { version = "1.0.141", features = ["preserve_order"]}
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
handlebars = "6.3.2"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"

[build-dependencies]
walkdir = "2.5.0"

