[package]
name = "tollkeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
hmac = "0.12.1"
indexmap = "2.11.1"
regex = "1.11.1"
serde = { version = "1.0.228", optional = true }
sha1 = "0.10.6"
sha2 = "0.10.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.16.0"
features = [
  "v4" # required to generate UUIDs
]

[dev-dependencies]
test-case = "3.3.1"
rand = "0.9.2"
hex-literal = "1.0.0"
pretty_assertions = "1.4.1"

[features]
serde = ["dep:serde"]
